@@ -5,12 +5,9 @@ import org.apache.log4j.Logger;
 import qmul.ds.formula.TTRRecordType;
 import qmul.ds.learn.Evaluation;
 import qmul.ds.learn.RecordTypeCorpus;
-import static qmul.ds.interactiveInduction.BabyDSInduction.mergeFiles;
+import qmul.ds.learn.WordHypothesisBase;
 
-import java.io.BufferedReader;
-import java.io.File;
-import java.io.FileReader;
-import java.io.IOException;
+import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.StandardOpenOption;
 import java.nio.file.StandardCopyOption;
@@ -31,22 +28,128 @@ public class Experiments {
 
     static final String seedGrammarPath = "resource\\2023-babyds-induction-output\\".replace("\\", File.separator); // The dir that works!
     static final String modelPath = "resource\\2025-babyds-RQ2\\minimal_data\\".replace("\\", File.separator);  //the dir that works!
-    static final String rq1path = "resource\\2025-babyds-RQ1\\class2\\".replace("\\", File.separator);
+    static final String rq1path = "resource\\2025-babyds-RQ1\\".replace("\\", File.separator);
+    static final String RQ1CLASS1HB = "resource\\2025-babyds-RQ1\\class1HB\\".replace("\\", File.separator);
+    static final String RQ1CLASS2HB = "resource\\2025-babyds-RQ1\\class2hb\\".replace("\\", File.separator);
+
     static final String rq2path = "resource\\2025-babyds-RQ2\\".replace("\\", File.separator);
-    String forgettingPath = "resource\\2025-babyds-RQ2\\forgetting\\".replace("\\", File.separator);
-    String generalisationPath = "resource\\2025-babyds-RQ2\\generalisation\\".replace("\\", File.separator);
-    static final String NTRR_RQ1_CLASS1_PATH = "resource\\2025-babyds-RQ1\\class1\\nn_results\\".replace("\\", File.separator);
+    static final String forgettingPath = "resource\\2025-babyds-RQ2\\forgetting\\".replace("\\", File.separator);
+    static final String generalisationPath = "resource\\2025-babyds-RQ2\\generalisation\\".replace("\\", File.separator);
+    static final String NTR_RQ1_CLASS1_PATH = "resource\\2025-babyds-RQ1\\c1_data\\BDS-TTR\\".replace("\\", File.separator);
+    static final String NTR_RQ1_CLASS2_PATH = "resource\\2025-babyds-RQ1\\c2_data\\".replace("\\", File.separator);
+
+    static final String NTR_RQ1_PATH = "resource\\2025-babyds-RQ1\\results_NTR\\".replace("\\", File.separator);
+    static final String NN_DATA_OUTPUT_FOLDER_NAME = "NTR-larger-batches-10";
 
 
-    public static final int SEED = 45; // Set a constant seed for reproducibility
+    public static final int SEED = 48; // Set a constant seed for reproducibility
     public static final double TRAIN_TEST_RATIO = 0.85;  // Train-Test split ratio (Meaning the x ratio is for train, 1-x is for test)
     public static final boolean SAVE_TO_FILE = true;  // Save the training and testing sets to file
-    public static final String CORPUS_NAME = "class2";
+    public static final String CORPUS_NAME = "class1";
     public static final int REPEAT = 1;  // Increments the seed for each repeat
     public static final int N = 3; // TopN actions to use.
+
+    // BATCH_RATIO for class2: 0.02 | class1: 0.1
     public static final double INIT_BATCH_RATIO = 0.1;  // Size of the initial data batch for evaluation - used in prepare_batch().
     public static final double INC_BATCH_RATIO = 0.1; // Size of the incremental data batches for evaluation - used in prepare_batch().
     public static final boolean SKIP_RETRAINING = true;  // If a model exists, and we don't want to get the "do you want to load it" message.
+    public static final int MINIMUM_CLASS1_BATCHES = 3;  // Minimum number of class1 batches to start with in RQ2 tests.
+    public static final double EARLY_STOPPING_MIN_THRESHOLD = 99.0;  // Minimum F1 threshold that must be reached before checking delta
+    public static final double EARLY_STOPPING_DELTA = 0.01;  // Minimum improvement required between consecutive runs
+
+
+    /**
+     * Checks if early stopping condition is met based on F1 score and coverage criteria.
+     * Early stopping is triggered when BOTH metrics are above their thresholds
+     * both show small (not considerable) improvement compared to the previous iteration.
+     * @param currentF1Score: The F1 score from the current training iteration
+     * @param previousF1Score: The F1 score from the previous training iteration (null if first iteration)
+     * @param minF1Threshold: Minimum F1 threshold that must be reached before checking delta
+     * @param f1Delta: Maximum improvement considered "not considerable" for F1 score
+     * @param currentCoverage: The coverage from the current training iteration
+     * @param previousCoverage: The coverage from the previous training iteration (null if first iteration)
+     * @param minCoverageThreshold: Minimum coverage threshold that must be reached before checking delta
+     * @param coverageDelta: Maximum improvement considered "not considerable" for coverage
+     * @return true if early stopping should be triggered, false otherwise
+     */
+    public boolean checkEarlyStoppingCondition(double currentF1Score, Double previousF1Score, double minF1Threshold, double f1Delta, double currentCoverage, Double previousCoverage, double minCoverageThreshold, double coverageDelta) {
+        // First check if BOTH metrics are above their minimum thresholds
+        if (currentF1Score < minF1Threshold || currentCoverage < minCoverageThreshold) {
+            if (currentF1Score < minF1Threshold) {
+                System.out.printf("F1 score %.3f below minimum threshold %.3f, continuing training%n",
+                    currentF1Score, minF1Threshold);
+            }
+            if (currentCoverage < minCoverageThreshold) {
+                System.out.printf("Coverage %.3f below minimum threshold %.3f, continuing training%n",
+                    currentCoverage, minCoverageThreshold);
+            }
+            return false;
+        }
+        
+        // If we have perfect results on both metrics, stop early
+        if (currentF1Score == 100.0 && currentCoverage == 100.0) {
+            System.out.printf("Early stopping triggered: Got perfect results with coverage %.3f and f1 score %.3f%n", currentCoverage, currentF1Score);
+            return true;
+        }
+        
+        // If we don't have previous scores, continue training
+        if (previousF1Score == null || previousCoverage == null) {
+            logger.debug("No previous scores available, continuing training");
+            return false;
+        }
+
+        // Calculate improvements
+        double f1Improvement = currentF1Score - previousF1Score;
+
+        double coverageImprovement = currentCoverage - previousCoverage;
+        
+        // Check if both improvements are not considerable (absolute value <= delta)
+        boolean f1ImprovementNotConsiderable = Math.abs(f1Improvement) <= f1Delta;
+        boolean coverageImprovementNotConsiderable = Math.abs(coverageImprovement) <= coverageDelta;
+        
+        if (f1ImprovementNotConsiderable && coverageImprovementNotConsiderable) {
+            System.out.printf("Early stopping triggered: F1 improvement %.3f (abs) below delta threshold %.3f and Coverage improvement %.3f (abs) below delta threshold %.3f%n",
+                Math.abs(f1Improvement), f1Delta, Math.abs(coverageImprovement), coverageDelta);
+            return true;
+        } else {
+            System.out.printf("Continuing training: F1 improvement %.3f, Coverage improvement %.3f%n",
+                f1Improvement, coverageImprovement);
+            return false;
+        }
+    }
+
+
+    /** Used in the mergeFiles method below.
+     * @param file The file to read from.
+     * @param writer The writer to write to.
+     * @throws IOException If an I/O error occurs.
+     */
+    private static void writeContent(File file, BufferedWriter writer) throws IOException {
+        try (BufferedReader reader = new BufferedReader(new FileReader(file))) {
+            String line;
+            while ((line = reader.readLine()) != null) {
+                writer.write(line);
+                writer.newLine(); // Ensure lines are properly separated
+            }
+        }
+    }
+
+
+    /** Used where I need to merge two datasets and create a RT corpus from them.
+     * Merges two files into one and saves it.
+     * @param file1 The first file to merge.
+     * @param file2 The second file to merge.
+     * @param outputFile The output file to save the merged content.
+     * @throws IOException If an I/O error occurs.
+     */
+   public static void mergeFiles(File file1, File file2, File outputFile) throws IOException {
+       try (BufferedWriter writer = new BufferedWriter(new FileWriter(outputFile, true))) {
+           // Read the first file and write to output
+           writeContent(file1, writer);
+           // Read the second file and write to output
+           writeContent(file2, writer);
+       }
+   }
 
 
     /**
@@ -80,7 +183,7 @@ public class Experiments {
         // First shuffle class 1 data
         Random random = new Random(SEED);
         Collections.shuffle(corpus1, random);
-        List<RecordTypeCorpus> training_batches_class1 = bds.prepare_batches(corpus1);
+        List<RecordTypeCorpus> training_batches_class1 = bds.prepare_batches(corpus1, INIT_BATCH_RATIO, INC_BATCH_RATIO);
         int minimum_data_class1_index = 6;  // TODO fix
         RecordTypeCorpus class1_minimum_data = training_batches_class1.get(minimum_data_class1_index);
         // anything after it will be added as batches.
@@ -90,7 +193,7 @@ public class Experiments {
         // train test split class 2
         Pair<RecordTypeCorpus, RecordTypeCorpus> train_test_pair_class2 = bds.train_test_split("class" + endClass, TRAIN_TEST_RATIO, SAVE_TO_FILE, "", SEED);
         RecordTypeCorpus test_data = train_test_pair_class2.second();
-        List<RecordTypeCorpus> training_batches_class2 = bds.prepare_batches(train_test_pair_class2.first());
+        List<RecordTypeCorpus> training_batches_class2 = bds.prepare_batches(train_test_pair_class2.first(), INIT_BATCH_RATIO, INC_BATCH_RATIO);
 
         // Merging here probably has to happen inside a loop, as I need to combine batches of class 1 and 2.
         String mergedCorpusName = "merged_" + startClass + "_" + endClass;  // TODO come up with a better name convention, as I will need a reflection of the batch sizes in the name.
@@ -125,109 +228,210 @@ public class Experiments {
 
 
     /**
-     * ATTENTION at this moment, this works on class 1 to 2 (imagine start class = 1, and end class = 2). Should be extended to support more. TODO
-     * @param startClass
-     * @param endClass
-     * @param format // F for only first class, S for only second class, M for mix of both -> based on what batches of
-     *               data I am adding (to minimal data) during training.
+     * Prepares RQ2 data.
+     * Reads in class 1 and class 2 data, creates batches from each, and uses the last batch of class1 as the forgetting
+     * test set and last batch of class 2 as the generalisation test set. Returns all of these.
+     * TODO add proper messages to errors in reading files here
+     * @param startClass index of the first class to be used (inclusive)
+     * @param endClass index of the last class to be used (inclusive)
+     * @param seed the seed for reproducibility (used in shuffling)
+     * @return a list of lists of RecordTypeCorpus (size=4) in this order:
+     *          1- class1 batches,
+     *          2- class2 batches,
+     *          3- forgetting test set (size=1),
+     *          4- generalisation test set (size=1).
      */
-    public void test_forgetting(int startClass, int endClass, String format) {
-        logger.info("Initiating forgetting experiments...");
-        BabyDSInduction ds = new BabyDSInduction(forgettingPath);
-        ds.verify_model_path(forgettingPath);
-        logger.debug("BabyDSInduction instance created.");
-        File data1 = new File(rq2path + "class" + startClass + ".txt");
-        File data2 = new File(rq2path + "class" + endClass + ".txt");
+    public List<List<RecordTypeCorpus>> getRQ2Data(int startClass, int endClass, int seed) {
+    List<List<RecordTypeCorpus>> rq2Data = new ArrayList<>();
+        File corpusFile1 = new File(rq2path + "class" + startClass + ".txt");
+        File corpusFile2 = new File(rq2path + "class" + endClass + ".txt");
         RecordTypeCorpus corpus1 = new RecordTypeCorpus();
         RecordTypeCorpus corpus2 = new RecordTypeCorpus();
         try {
-            corpus1.loadCorpus(data1);
+            corpus1.loadCorpus(corpusFile1);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
-        logger.debug("Corpus1 loaded.");
+        logger.trace("Corpus1 loaded.");
         try {
-            corpus2.loadCorpus(data2);
+            corpus2.loadCorpus(corpusFile2);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
-        logger.debug("Corpus2 loaded.");
-        // TODO actually get minimal data of class 1, and not just train test split.
+        logger.trace("Corpus2 loaded.");
 
-        // First, grab the minimum and enough data of class 1, and add batches of class 2 to it (and then more batches
-        // of class 1, and also a mix of these), and train a model on it:
-//        RecordTypeCorpus class1_minimum_data = new RecordTypeCorpus();  //TODO and more because I want to add batches
-        // First shuffle class 1 data
-        Collections.shuffle(corpus1, new Random(SEED));
-        List<RecordTypeCorpus> class1_batches = ds.prepare_batches(corpus1);
+        // First deal with class 1 batches
+        Collections.shuffle(corpus1, new Random(seed));
+        List<RecordTypeCorpus> class1_batches = BabyDSInduction.prepare_batches(corpus1, INIT_BATCH_RATIO, INC_BATCH_RATIO);  //todo this is not ok that babyds is doing this! Has to be RTCorpus!
         // get the test data
-        RecordTypeCorpus test_data = class1_batches.getLast();  // TODO or maybe do train-test split...
-        test_data.corpusName = "babyds_test_" + startClass + "_" + test_data.size() + ".txt";
-        try {  // todo improve save and load methods to return the object itself.
-            test_data.saveCorpus(forgettingPath + test_data.corpusName);
+        RecordTypeCorpus forgetting_test_data = class1_batches.get(class1_batches.size()-1);
+        forgetting_test_data.corpusName = "babyds_forgetting_test_" + startClass + "_" + forgetting_test_data.size() + ".txt";
+        try {
+            forgetting_test_data.saveCorpus(rq2path + forgetting_test_data.corpusName);  //todo is rq2path here ok?
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
-        // todo probably have to write it to file and later during eval, read it back...
-        // pop the last element from the list as it is used for test data.
-        class1_batches.removeLast();
+        class1_batches.remove(class1_batches.size()-1);  // pop the last element from the list as it is used for test data.
 
-        int minimum_data_class1_index = 7;  // TODO fix: calculate this actually in a method
-        RecordTypeCorpus class1_minimum_data = RecordTypeCorpus.mergeAllCorpora(class1_batches.subList(0, minimum_data_class1_index)); // todo fix: the first 6 batches are the minimum data, not just the 6th batch.
+        // Now deal with class 2 batches
+        Collections.shuffle(corpus2, new Random(seed));
+        List<RecordTypeCorpus> class2_batches = BabyDSInduction.prepare_batches(corpus2, INIT_BATCH_RATIO, INC_BATCH_RATIO);  //todo this is not ok that babyds is doing this! Has to be RTCorpus!
+        // get the test data
+        RecordTypeCorpus generalisation_test_data = class2_batches.get(class2_batches.size()-1);
+        generalisation_test_data.corpusName = "babyds_generalisation_test_" + startClass + "_" + generalisation_test_data.size() + ".txt";
+        try {
+            generalisation_test_data.saveCorpus(rq2path + generalisation_test_data.corpusName); //todo is rq2path here ok?
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+        class2_batches.remove(class2_batches.size()-1);  // pop the last element from the list as it is used for test data.
+
+        // At the end add these to the list and return.
+        rq2Data.add(class1_batches);
+        rq2Data.add(class2_batches);
+        rq2Data.add(Collections.singletonList(forgetting_test_data));  //todo what is this? is it correct?
+        rq2Data.add(Collections.singletonList(generalisation_test_data));
+
+        return rq2Data;
+    }
+
+
+    /**
+     * Tests a BabyDS model for forgetting and generalisation on lower and higher classes.
+     * ATTENTION at this moment, this works on class 1 to 2 (imagine start class = 1, and end class = 2). Should be extended to support more. TODO
+     * @param startClass
+     * @param endClass
+     * @param setting Specifies batches from what class of data should be added. Options: "first", "second", "both". //todo extend to full classes scenario.
+     * @param withCurriculum specifies if curriculum learning is used or not (sorts data or shuffles it based on the boolean value provided).
+     * TODO rename format to something more meaningful.
+     * todo add also "C" for curriculum learning tests, and "R" for random learning tests.
+     * todo rename to rq2 and remove generalisation as a separate method!
+     */
+    public RQ2SeedResult test_generalisation_forgetting(int startClass, int endClass, String setting, boolean withCurriculum, int seed) {
+        logger.info("Initiating forgetting experiments...");
+        RQ2SeedResult results = new RQ2SeedResult();
+
+        BabyDSInduction ds = new BabyDSInduction(forgettingPath); //todo is this correct
+//        ds.verify_model_path(forgettingPath);
+        logger.debug("BabyDSInduction instance created.");
+        //todo better handle file names based on startswith, than pure names...
+
+        List<List<RecordTypeCorpus>> rq2Data = getRQ2Data(startClass, endClass, seed);
+        List<RecordTypeCorpus> class1_batches = rq2Data.get(0);
+        List<RecordTypeCorpus> class2_batches = rq2Data.get(1);
+        RecordTypeCorpus forgetting_test_data = rq2Data.get(2).get(0);
+        RecordTypeCorpus generalisation_test_data = rq2Data.get(3).get(0);
+
+        // First, grab the minimum and enough data of class 1 (number of batches to reach mastery from RQ1 basically),
+        // and add batches of class1 or class2 or their mix, and train a model on it:
+        int minimum_data_class1_index = MINIMUM_CLASS1_BATCHES;  // TODO is it ok that this is from the visuals we got (6 was good enough)?
+
+        RecordTypeCorpus class1_minimum_data = RecordTypeCorpus.mergeAllCorpora(class1_batches.subList(0, minimum_data_class1_index)); // This is exclusive.
         logger.info("Class 1 minimum data size: " + class1_minimum_data.size());
         // anything after it will be added as batches.
         List<RecordTypeCorpus> class1_extra_batches = class1_batches.subList(minimum_data_class1_index + 1, class1_batches.size());
-        // Select the minimum data of class 1 (based on previous experiments - using indices) and add keep the rest as batches to be added later.
-        // todo save these batched datasets to file
-        // train test split class 2
-//        Pair<RecordTypeCorpus, RecordTypeCorpus> train_test_pair_class2 = bds.train_test_split(corpus2, TRAIN_TEST_RATIO, SAVE_TO_FILE); // todo fix it has t be prepare batches actually!
-        List<RecordTypeCorpus> training_batches_class2 = ds.prepare_batches(corpus2);  // TODO Since my classes will have different sizes, do I need to choose my batches not based on percentage but with a fixed length?
+        class1_extra_batches.add(0,new RecordTypeCorpus());  // This is so that we can have the first extra batch being empty, and then start with min data below (in the cumulativeTrainingData).
 
-        RecordTypeCorpus mergedCorpusS = class1_minimum_data.mergeCorpora(new RecordTypeCorpus());  // basically just class 1 minimal data so making a copy of it.
-        if (format.equals("S") || format.equals("B")) {
-            // todo can make this a separate method: I need to do the same for batches of class 1 and the mix of class 1 and 2...
-            for (RecordTypeCorpus batch : training_batches_class2.subList(0,3)) {  // TODO same thing has to happen with class 1 batches and mix of class 1 and 2 batches.
-                mergedCorpusS = mergedCorpusS.mergeCorpora(batch.getSubCorpus(0,40));  // TODO set name as well! + maybe deal with batch size here?
-                logger.debug("Current merged corpus size: " + mergedCorpusS.size());
-                mergedCorpusS.corpusName = "merged_" + startClass + "_" + endClass + "_" + batch.corpusName;  // maybe add and use a setName method? //todo fix + include batch number in the name
-                Collections.shuffle(mergedCorpusS, new Random(SEED));
-                mergedCorpusS.corpusName = "babyds_train_" + startClass + "_" + mergedCorpusS.size() + ".txt";  //TODO
-                try {  // todo improve save and load methods to return the object itself.
-                    mergedCorpusS.saveCorpus(forgettingPath + mergedCorpusS.corpusName);
-                } catch (IOException e) {
-                    throw new RuntimeException(e);
+        // Now based on the setting, create the "training set".
+        RecordTypeCorpus cumulativeTrainingData = class1_minimum_data.mergeCorpora(new RecordTypeCorpus());  // basically just class 1 minimal data so making a copy of it.
+        //TODO replace the below with a method call, obviously!
+        switch (setting) {
+            case "first": {
+                int currentMergedBatchIndex = minimum_data_class1_index;
+                WordHypothesisBase previousModel = null;
+                System.out.println(ANSI_GREEN + "******** Seed: " + seed + " | currentMergedBatch: " + currentMergedBatchIndex + " | setting: " + setting + "********" + ANSI_RESET);
+                // TODO control for the size / num batches here...
+                for (RecordTypeCorpus batch : class1_extra_batches) {  // TODO same thing has to happen with class 1 batches and mix of class 1 and 2 batches.
+                    RecordTypeCorpus nonCumulativeTrainingData = new RecordTypeCorpus(); // reset for non-cumulative
+                    nonCumulativeTrainingData.addAll(batch);
+                    cumulativeTrainingData.addAll(batch);
+                    // cumulativeTrainingData = cumulativeTrainingData.mergeCorpora(batch);//.getSubCorpus(0, 40));  // TODO set name as well
+                    //TODO IS THSI CORERCTcomapred to RQ1?
+                    // is the above the same as cumulativeTrainingData.addAll(batch)?
+                    logger.debug("Current merged corpus size: " + cumulativeTrainingData.size());
+                    if (withCurriculum) {  //TODO test + provide our proper way for curriculum learning.
+//                        cumulativeTrainingData.sort(new RecordTypeCorpus.RecordTypeComparator());
+                    } else {
+                        Collections.shuffle(cumulativeTrainingData, new Random(seed));
+                    }
+                    cumulativeTrainingData.corpusName = "merged_" + startClass + "_" + endClass + "_" + batch.corpusName;  // todo maybe add and use a setName method? //todo fix + include batch number in the name
+                    String currentFolderName = "S" + seed + "_B" + currentMergedBatchIndex;
+                    // REMEMBER: the training results to be considered should be only the ones with the cumulative batch (potentially the second call to trainTestBatchWithHB) and not the ones with the non-cumulative batch.
+                    // EvalResult generalisationResult = trainTestBatch(rq2path, currentFolderName, cumulativeTrainingData, generalisation_test_data, currentMergedBatchIndex, "_gens");  //todo fix
+                    Pair<EvalResult, WordHypothesisBase> generalisationResultHB = trainTestBatchWithHB(rq2path, currentFolderName, cumulativeTrainingData, generalisation_test_data, currentMergedBatchIndex, "_gens", previousModel);  //todo fix
+                    EvalResult generalisationResult = generalisationResultHB.first();
+                    previousModel = generalisationResultHB.second();  // Store the model for the next iteration
+
+                    // EvalResult forgettingResult = trainTestBatch(rq2path, currentFolderName, cumulativeTrainingData, forgetting_test_data, currentMergedBatchIndex, "_forg");  //todo fix
+                    Pair<EvalResult, WordHypothesisBase> forgettingResultHB = trainTestBatchWithHB(rq2path, currentFolderName, cumulativeTrainingData, forgetting_test_data, currentMergedBatchIndex, "_forg", previousModel);  //todo fix
+                    EvalResult forgettingResult = forgettingResultHB.first();
+//                    EvalResult forgettingResult = ds.evaluate_model(0, forgettingPath, "babyds", "_forg", N);  //todo fix I think I should add a "force test data" param!
+
+                    logger.info("Eval for batch number: ");
+                    logger.info(generalisationResult.getParsingCoverageResultsTable("test data size: "));  //todo add proper info
+                    logger.info(generalisationResult.getSemanticAccResultsTable("")); // todo fix
+                    logger.info(forgettingResult.getParsingCoverageResultsTable("test data size: "));  //todo add proper info
+                    logger.info(forgettingResult.getSemanticAccResultsTable("")); // todo fix
+                    currentMergedBatchIndex++;
+                    results.getGeneralisationResults().add(generalisationResult);
+                    results.getForgettingResults().add(forgettingResult);
                 }
-                ds.train_model(mergedCorpusS, forgettingPath, seedGrammarPath);
-//                Pair<HashMap<Integer, HashMap<String, HashMap<String, Double>>>, HashMap<Integer, HashMap<String, ArrayList<Double>>>> ttsResults = ds.evaluate_model(0, forgettingPath, "babyds");
-//                EvalResult ev = new EvalResult(ttsResults.first, ttsResults.second);
-                EvalResult ev = ds.evaluate_model(0, forgettingPath, "babyds", "", N);
-                System.out.println("Eval for batch number: " + training_batches_class2.indexOf(batch));
-                System.out.println(ev.getParsingCoverageResultsTable("test data size: " + test_data.size()));  //todo add proper info
-                System.out.println(ev.getSemanticAccResultsTable("")); /// todo fix
-//                EvalResult ttsResults = bds.evaluate_model();
-                // write these results to file + the model + the data in a proper folder!
+            }
+            case "second": {
+                int currentMergedBatchIndex = minimum_data_class1_index; //TODO change for class 2
+                System.out.println(ANSI_GREEN + "******** Seed: " + seed + " | currentMergedBatch: " + currentMergedBatchIndex + " | setting: " + setting + "********" + ANSI_RESET);
+                for (RecordTypeCorpus batch : class2_batches) {  // TODO same thing has to happen with class 1 batches and mix of class 1 and 2 batches.
+                    cumulativeTrainingData = cumulativeTrainingData.mergeCorpora(batch);//.getSubCorpus(0, 40));  // TODO set name as well! + maybe deal with batch size here?
+                    logger.debug("Current merged corpus size: " + cumulativeTrainingData.size());
+                    if (withCurriculum) {  //todo test + provide our proper way for curriculum learning.
+                    } else {
+                        Collections.shuffle(cumulativeTrainingData, new Random(seed));  //TODO should not happen if curriculum learning is used.
+                    }
+                    cumulativeTrainingData.corpusName = "merged_" + startClass + "_" + endClass + "_" + batch.corpusName;  // todo maybe add and use a setName method? //todo fix + include batch number in the name
+                    String currentFolderName = "S" + seed + "_B" + currentMergedBatchIndex;
+                    EvalResult generalisationResult = trainTestBatch(rq2path, currentFolderName, cumulativeTrainingData, generalisation_test_data, currentMergedBatchIndex, "_gens");  //todo fix
+                    EvalResult forgettingResult = trainTestBatch(rq2path, currentFolderName, cumulativeTrainingData, forgetting_test_data, currentMergedBatchIndex, "_forg");  //todo fix
+                    logger.info("Eval for batch number: ");
+                    logger.info(generalisationResult.getParsingCoverageResultsTable("test data size: "));  //todo add proper info
+                    logger.info(generalisationResult.getSemanticAccResultsTable("")); // todo fix
+                    logger.info(forgettingResult.getParsingCoverageResultsTable("test data size: "));  //todo add proper info
+                    logger.info(forgettingResult.getSemanticAccResultsTable("")); // todo fix
+                    currentMergedBatchIndex++;
+                    results.getGeneralisationResults().add(generalisationResult);
+                    results.getForgettingResults().add(forgettingResult);
+                }
+            }
+            case "both": {
+                int currentMergedBatchIndex = minimum_data_class1_index; //TODO change for class 2
+                System.out.println(ANSI_GREEN + "******** Seed: " + seed + " | currentMergedBatch: " + currentMergedBatchIndex + " | setting: " + setting + "********" + ANSI_RESET);
+                RecordTypeCorpus next_class1_batch = class1_extra_batches.iterator().next();
+                RecordTypeCorpus next_class2_batch = class2_batches.iterator().next();
+                RecordTypeCorpus batch = next_class1_batch.mergeCorpora(next_class2_batch);
+                  // TODO same thing has to happen with class 1 batches and mix of class 1 and 2 batches.
+                //TODO this cumulativeBatch is wrong and has to be properly initiated.
+                    cumulativeTrainingData = cumulativeTrainingData.mergeCorpora(batch);//.getSubCorpus(0, 40));  // TODO set name as well! + maybe deal with batch size here?
+                    logger.debug("Current merged corpus size: " + cumulativeTrainingData.size());
+                    if (withCurriculum) {  //todo test + provide our proper way for curriculum learning.
+                    } else {
+                        Collections.shuffle(cumulativeTrainingData, new Random(seed));  //TODO should not happen if curriculum learning is used.
+                    }
+                    cumulativeTrainingData.corpusName = "merged_" + startClass + "_" + endClass + "_" + batch.corpusName;  // todo maybe add and use a setName method? //todo fix + include batch number in the name
+                    String currentFolderName = "S" + seed + "_B" + currentMergedBatchIndex;
+                    EvalResult generalisationResult = trainTestBatch(rq2path, currentFolderName, cumulativeTrainingData, generalisation_test_data, currentMergedBatchIndex, "_gens");  //todo fix
+                    EvalResult forgettingResult = trainTestBatch(rq2path, currentFolderName, cumulativeTrainingData, forgetting_test_data, currentMergedBatchIndex, "_forg");  //todo fix
+                    logger.info("Eval for batch number: ");
+                    logger.info(generalisationResult.getParsingCoverageResultsTable("test data size: "));  //todo add proper info
+                    logger.info(generalisationResult.getSemanticAccResultsTable("")); // todo fix
+                    logger.info(forgettingResult.getParsingCoverageResultsTable("test data size: "));  //todo add proper info
+                    logger.info(forgettingResult.getSemanticAccResultsTable("")); // todo fix
+                    currentMergedBatchIndex++;
+                    results.getGeneralisationResults().add(generalisationResult);
+                    results.getForgettingResults().add(forgettingResult);
 
             }
+            default: logger.error("Invalid setting provided. Please use 'first', 'second' or 'both'.");
         }
-        RecordTypeCorpus mergedCorpusF = class1_minimum_data.mergeCorpora(new RecordTypeCorpus());  // basically just class 1 data so making a copy of it.
-        if (format.equals("F") || format.equals("B")) {
-            // todo can make this a separate method: I need to do the same for batches of class 1 and the mix of class 1 and 2...
-            // todo my batches are separate, therefore this has to add batches to previous ones and not ignore previous ones.
-            for (RecordTypeCorpus batch : class1_extra_batches) {  // TODO same thing has to happen with class 1 batches and mix of class 1 and 2 batches.
-                mergedCorpusF = mergedCorpusF.mergeCorpora(batch);  // TODO set name as well!
-                mergedCorpusF.corpusName = "merged_" + startClass + "_" + endClass + "_" + batch.corpusName;  // maybe add and use a setName method? //todo fix
-                // todo save in forgetting dir - later add batch number to the name
-                Collections.shuffle(mergedCorpusF, new Random(SEED));
-                ds.train_model(mergedCorpusF, forgettingPath, seedGrammarPath); //
-//                Pair<HashMap<Integer, HashMap<String, HashMap<String, Double>>>, HashMap<Integer, HashMap<String, ArrayList<Double>>>> ttsResults = ds.evaluate_model(0, forgettingPath, "babyds");
-//                EvalResult ev = new EvalResult(ttsResults.first, ttsResults.second);
-                EvalResult ev = ds.evaluate_model(0, forgettingPath, "babyds", "", N);
-                System.out.println(ev.getParsingCoverageResultsTable(""));
-                System.out.println(ev.getSemanticAccResultsTable("")); /// todo fix
-//                String semanticAcc = EvalResult.getSemanticAccResultsTable(ttsResults.first);
-                // write these results to file + the model + the data in a proper folder!
-            }
-        }
+        return results;
     }
 
 
@@ -269,14 +473,334 @@ public class Experiments {
                 currentSeedFolder.mkdirs();
             } else
                 logger.warn("Folder already exists: " + currentSeedFolder.getAbsolutePath());
-            RecordTypeCorpus devSet = trainingBatches.getLast();
+            RecordTypeCorpus devSet = trainingBatches.get(trainingBatches.size()-1);
             devSet.corpusName = corpus.corpusName+"_test";
             try {
                 devSet.saveCorpus(currentSeedFolder + File.separator + devSet.corpusName + ".txt");
             } catch (IOException e) {
                 throw new RuntimeException(e);
             }
-            trainingBatches.removeLast();
+            trainingBatches.remove(trainingBatches.size()-1);
+            // Done with the test set, now dealing with training batches.
+            int batchCounter = 0;
+            // First, save all to file:
+            for (RecordTypeCorpus batch : trainingBatches) { // todo double check logic
+                //todo make method for this, so it's tidier and smaller here.
+                batchCounter++;
+                batch.corpusName = corpus.corpusName + "_trainBatch" + batchCounter;
+                try {  //todo similar ot the load method: make it cleaner so users don't have to see all this everytime!
+                    // Save these to their own folder, by creating it:
+                    batch.saveCorpus(currentSeedFolder + File.separator+ batch.corpusName + ".txt"); // TODO apparently this is not working...
+                } catch (IOException e) {
+                    throw new RuntimeException(e);
+                }
+            }
+            // Now do the training and eval:
+            int currentMergedBatchIndex = 1;
+            // RecordTypeCorpus cumulativeTrainingData = new RecordTypeCorpus();
+            WordHypothesisBase previousModel = null;
+            Double previousF1Score = null;  // Track previous F1 score for early stopping
+            Double previousCoverage = null;  // Track previous coverage for early stopping
+            System.out.println(ANSI_GREEN + "******** Seed " + currentSeed + " ********" + ANSI_RESET);
+            for (RecordTypeCorpus batch : trainingBatches) {
+                RecordTypeCorpus cumulativeTrainingData = new RecordTypeCorpus(); // Moved it here to have it reset (non-cumulative).
+                cumulativeTrainingData.addAll(batch);
+                cumulativeTrainingData.corpusName = corpus.corpusName + "_trainBatch" + currentMergedBatchIndex;  // Todo is it used for anything beside writing results to file? I don't think so.
+                String currentFolderName = "S" + currentSeed + "_B" + currentMergedBatchIndex;
+                // Here, cumulative batch shouldn't be used and only the new current batch is necessary + has to pass previous model as hb.
+                // TODO do a if-else for the first batch so I can pass no HB.
+
+//                if (currentMergedBatchIndex == 1) {
+//                    batchResult = trainTestBatchwithHB(currentFolderName, modelDir, cumulativeTrainingData, testSet, currentMergedBatchIndex, "", ""); // todo maybe use currentseeddir so it's all under the seed folder, for tidiness.
+//                } else {
+//                    String previousModelDir = modelDir + "S" + currentSeed + "_B" + (currentMergedBatchIndex-1);
+//                    batchResult = trainTestBatchwithHB(currentFolderName, modelDir, cumulativeTrainingData, testSet, currentMergedBatchIndex, "", previousModelDir);
+//                }
+                Pair<EvalResult, WordHypothesisBase> trainOutput = trainTestBatchWithHB(currentFolderName, modelDir, cumulativeTrainingData, devSet, currentMergedBatchIndex, "", previousModel);
+                EvalResult batchResult = trainOutput.first;
+                previousModel = trainOutput.second;
+                
+                // Get current F1 score for early stopping check
+                double currentF1Score = batchResult.getTestAccuracy(N, "f1");
+                double currentCoverage = batchResult.getTestCoverage(N);
+                
+                // Check early stopping condition
+                if (checkEarlyStoppingCondition(currentF1Score, previousF1Score, EARLY_STOPPING_MIN_THRESHOLD, EARLY_STOPPING_DELTA, currentCoverage, previousCoverage, EARLY_STOPPING_MIN_THRESHOLD, EARLY_STOPPING_DELTA)) {
+                    logger.info(String.format("Early stopping triggered at batch %d for seed %d. F1 score: %.3f", 
+                        currentMergedBatchIndex, currentSeed, currentF1Score));
+                    resultInSeed.add(batchResult);
+                    fullResults.put(i, resultInSeed);
+                    addResultsToTSV(currentSeed, batchResult, modelDir + "fullResultsHB.tsv");
+                    break;  // Exit the training loop
+                }
+                
+                currentMergedBatchIndex++;
+                resultInSeed.add(batchResult);
+                fullResults.put(i, resultInSeed);
+                addResultsToTSV(currentSeed, batchResult, modelDir + "fullResultsHB.tsv");
+                
+                // Update previous F1 score for next iteration
+                previousF1Score = currentF1Score;
+                previousCoverage = currentCoverage;
+            }
+        }
+        return fullResults;
+    }
+
+
+        /**
+     * Creates a neural parsing corpus from the given corpus name and model address -> Data must have been generated before (by the generateDataFolders method).
+     * Called by convertCurrentCorpusToNN.
+     * Does this in a paralleled way.
+     * @param corpusName The name of the corpus to read (without .txt).
+     * @param modelAddress The main directory (to read the corpus and save the model in).
+     * todo move to their own class I think.
+     */
+    public void makeNeuralParsingCorpus(String corpusName, String modelAddress, String savePath) {
+        RecordTypeCorpus corpus = new RecordTypeCorpus();
+        try {
+            corpus.loadCorpus(new File(modelAddress + File.separator + corpusName+".txt"));
+            // Extract all TTRRecordTypes from corpus pairs
+            List<TTRRecordType> rts = corpus.stream()
+                .map(Pair::second)
+                .collect(Collectors.toList());
+
+            // Process RTTypes in parallel using embeddedRT2NN
+            List<String> nnReprs = rts.parallelStream()
+                .map(TTRRecordType::embeddedRT2NNList)
+                .collect(Collectors.toList());
+
+            logger.info("Processed " + nnReprs.size() + " record types into neural representations");
+            // TODO: Save or further process the neural representations
+            //TODO move this out of the try block
+            if (savePath.isEmpty()) {
+                savePath = modelAddress;
+            }
+            // Making sure it exists
+            File saveDir = new File(savePath);
+            if (!saveDir.exists()) {
+                if (saveDir.mkdirs()) {
+                    logger.info("Directory created: " + savePath);
+                } else {
+                    logger.error("Failed to create directory: " + savePath);
+                    throw new IOException("Could not create directory: " + savePath);
+                }
+            }
+
+            try (BufferedWriter writer = new BufferedWriter(new FileWriter(savePath + File.separator + corpusName + "_neural_targets"+".txt"))) { // + idx was here.
+                for (int i = 0; i < corpus.size(); i++) {
+                    writer.write(corpus.get(i).first().toString());
+                    writer.newLine();
+//                    writer.write(String.join(" ", nnReprs.get(i)));
+                    writer.write(nnReprs.get(i));
+                    writer.newLine();
+                    writer.newLine();
+                }
+                logger.info("Saved neural representations to: " + savePath + corpusName + "_neural_targets"+".txt");  // + idx was here.
+            } catch (IOException e) {
+                logger.error("Error saving neural representations: " + e.getMessage());
+            }
+
+        } catch (IOException e) {
+            logger.error("Error loading corpus: " + e.getMessage());
+            throw new RuntimeException(e);
+        }
+    }
+
+
+    /**
+     * Reads in generated corpora and converts them to neural representations.
+     * Calls makeNeuralParsingCorpus for each corpus.
+     * Basically looping over folders with the above method.
+     * @param rootFolder The root folder where the converted corpora are stored.
+     */
+    public void convertCurrentCorporaToNN(String rootFolder) {
+        File root = new File(rootFolder);
+        File[] folders = root.listFiles(File::isDirectory);
+        if (folders != null) {
+            for (File folder : folders) {
+                String folderName = folder.getName();
+                if (folderName.contains("B")) {  // AA trick to read the desired (batch) folders
+                    File[] files = folder.listFiles();
+                    if (files != null) {
+                        for (File file : files) {
+                            String fileName = file.getName();
+                            if (fileName.startsWith("_tr")) {  // Train file
+                                makeNeuralParsingCorpus("_train", folder.getAbsolutePath(), rootFolder+ NN_DATA_OUTPUT_FOLDER_NAME +File.separator+folderName);
+                            } else if (fileName.startsWith("_te")) {  // Test file
+                                makeNeuralParsingCorpus("_test", folder.getAbsolutePath(), rootFolder+ NN_DATA_OUTPUT_FOLDER_NAME +File.separator+folderName);
+                            } else if (fileName.startsWith("_dev")) { // Dev file
+                                makeNeuralParsingCorpus("_dev", folder.getAbsolutePath(), rootFolder+ NN_DATA_OUTPUT_FOLDER_NAME +File.separator+folderName);
+                            } else {
+                                logger.trace("File " + file.getName() + " does not start with _train or _test. Skipping...");
+                            }
+                        }
+                    }
+                }
+            }
+        } else {
+            logger.error("No folders found in the root directory: " + rootFolder);
+        }
+    }
+
+
+    /**
+     * Generates data with **cumulative** training batches for each seed and batch combination in their own folders, in [sent, ttr sem] format.
+     * REMINDER: for neural parsing data, convertCurrentCorpusToNN in BabyDSInduction has to be called on the root directory (after a call to this method!).
+     * Mainly made for NeuralTTR data generation because I didn't want to wait for debugging BabyDS!
+     * Creates separate folders for each batch with naming pattern "S{seed}_B{batchNumber}" and saves
+     * cumulative training data (each batch contains all previous batches plus the current one).
+     * @param corpusName: The name of the corpus file (without extension) to load for training
+     * @param rootDir: The root directory path where batch folders and data will be saved - corpus (with name corpusName) should be in this directory.
+     * @param repeatCount: The number of experimental repeats to perform with different seeds
+     * @param seed: The base random seed for reproducibility (incremented for each repeat)
+     * @author: AA
+     */
+    public void generateDataFolders(String corpusName, String rootDir, int repeatCount, int seed, double initBatchRatio, double incBatchRatio) {
+        BabyDSInduction ds = new BabyDSInduction();
+        for (int i = 0; i < repeatCount; i++) {
+            RecordTypeCorpus corpus = new RecordTypeCorpus(corpusName);
+            try { // todo better load corpus method, so users won't see all these try-catch everytime!
+                corpus.loadCorpus(new File(rootDir + corpusName + ".txt"));
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+            // Split the data into training batches and a development set
+            int currentSeed = seed + i;
+            Collections.shuffle(corpus, new Random(currentSeed));
+            List<RecordTypeCorpus> trainingBatches = ds.prepare_batches(corpus, initBatchRatio, incBatchRatio);
+            
+            // Extract test set (last batch) and dev set (second-to-last batch) and save them to main seed folder
+            File currentSeedFolder = new File(rootDir + "S" + currentSeed + File.separator);
+            if (!currentSeedFolder.exists()) {
+                currentSeedFolder.mkdirs();
+            } else
+                logger.warn("Folder already exists: " + currentSeedFolder.getAbsolutePath());
+            
+            RecordTypeCorpus testSet = trainingBatches.get(trainingBatches.size() - 1);
+            testSet.corpusName = corpus.corpusName + "_test";
+            RecordTypeCorpus devSet = trainingBatches.get(trainingBatches.size() - 2);
+            devSet.corpusName = corpus.corpusName + "_dev";
+            
+            try {
+                testSet.saveCorpus(currentSeedFolder + File.separator + testSet.corpusName + ".txt");
+                devSet.saveCorpus(currentSeedFolder + File.separator + devSet.corpusName + ".txt");
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+            trainingBatches.remove(trainingBatches.size() - 1); // Remove test set
+            trainingBatches.remove(trainingBatches.size() - 1); // Remove dev set
+            
+            // Now create cumulative batches in separate folders
+            int batchNumber = 1;
+            RecordTypeCorpus cumulativeTrainingData = new RecordTypeCorpus();
+            
+            for (RecordTypeCorpus batch : trainingBatches) {
+                // Add current batch to cumulative data
+                cumulativeTrainingData.addAll(batch);
+                cumulativeTrainingData.corpusName = corpus.corpusName + "_cumulativeBatch" + batchNumber;
+                
+                // Create folder for this batch with naming pattern "S{seed}_B{batchNumber}"
+                String currentFolderName = "S" + currentSeed + "_B" + batchNumber;
+                File batchFolder = new File(rootDir + currentFolderName + File.separator);
+                boolean folderExisted = batchFolder.exists();
+                if (!batchFolder.exists()) {
+                    batchFolder.mkdirs();
+                    logger.info("Created new batch folder: " + batchFolder.getAbsolutePath());
+                } else {
+                    logger.info("Batch folder already exists, will overwrite data files: " + batchFolder.getAbsolutePath());
+                }
+                
+                // Copy computational-actions.txt to batch folder if it exists
+                File sourceFile = new File(rootDir + "computational-actions.txt");
+                if (sourceFile.exists()) {
+                    File destFile = new File(batchFolder + File.separator + "computational-actions.txt");
+                    try {
+                        Files.copy(sourceFile.toPath(), destFile.toPath(), StandardCopyOption.REPLACE_EXISTING);
+                        if (folderExisted && destFile.exists()) {
+                            logger.debug("Overwritten computational-actions.txt in batch folder");
+                        }
+                    } catch (IOException e) {
+                        logger.warn("Failed to copy computational-actions.txt to batch folder: " + e.getMessage());
+                    }
+                }
+                
+                // Save cumulative training data, dev set, and test set to this batch folder
+                try {
+                    cumulativeTrainingData.saveCorpus(batchFolder + File.separator + "_train.txt");
+                    devSet.saveCorpus(batchFolder + File.separator + "_dev.txt");
+                    testSet.saveCorpus(batchFolder + File.separator + "_test.txt");
+                    if (folderExisted) {
+                        logger.debug("Overwritten training, dev, and test data files in batch folder: " + currentFolderName);
+                    }
+                } catch (IOException e) {
+                    throw new RuntimeException("Failed to save corpus files to batch folder: " + e.getMessage());
+                }
+                
+                batchNumber++;
+            }
+        }
+    }
+
+
+    /**
+     * Conducts Research Question 1 (RQ1) experiments using Hypothesis Base (HB) incremental learning.
+     * This method trains BabyDS models incrementally on data batches, where each new model builds upon 
+     * the previous one (hypothesis base), and evaluates performance with early stopping mechanisms.
+     * 
+     * The workflow for each repeat includes:
+     * 1. Load and shuffle corpus data with a deterministic seed
+     * 2. Split data into training batches, development set (second-to-last batch), and test set (last batch)
+     * 3. Train models incrementally on each batch using the previous model as hypothesis base
+     * 4. Evaluate each trained model on both development and test sets
+     * 5. Apply early stopping based on development set F1 score improvement threshold
+     * 6. Report final results on test set and save all results to TSV files for analysis
+     * 
+     * @param corpusName: The name of the corpus file (without extension) to load for training
+     * @param modelDir: The root directory path where models, batches, and results will be saved
+     * @param repeatCount: The number of experimental repeats to perform with different seeds
+     * @param seed: The base random seed for reproducibility (incremented for each repeat)
+     * @return A HashMap mapping repeat index to list of EvalResult objects from each training batch
+     */
+    public HashMap<Integer, List<EvalResult>> rq1HB(String corpusName, String modelDir, int repeatCount, int seed) {
+        BabyDSInduction ds = new BabyDSInduction();
+        HashMap<Integer, List<EvalResult>> fullResults = new HashMap<>(); // Return value.
+
+        for (int i = 0; i < repeatCount; i++) {
+            RecordTypeCorpus corpus = new RecordTypeCorpus(corpusName);
+            try { // todo better load corpus method, so users won't see all these try-catch everytime!
+                corpus.loadCorpus(new File(modelDir+corpusName+".txt"));
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+            List<EvalResult> resultInSeed = new ArrayList<>();
+            // Split the data into training batches and a development set
+            int currentSeed = seed + i;
+            Collections.shuffle(corpus, new Random(currentSeed));
+            List<RecordTypeCorpus> trainingBatches = ds.prepare_batches(corpus, INIT_BATCH_RATIO, INC_BATCH_RATIO);
+            // todo put below in a separate method for tidiness.
+            File currentSeedFolder = new File(modelDir + "S" + currentSeed + File.separator);
+            if (!currentSeedFolder.exists()) {
+                currentSeedFolder.mkdirs();
+            } else
+                logger.warn("Folder already exists: " + currentSeedFolder.getAbsolutePath());
+            
+            // Extract test set (last batch) and dev set (second-to-last batch)
+            RecordTypeCorpus testSet = trainingBatches.get(trainingBatches.size()-1);
+            testSet.corpusName = corpus.corpusName+"_test";
+            RecordTypeCorpus devSet = trainingBatches.get(trainingBatches.size()-2);
+            devSet.corpusName = corpus.corpusName+"_dev";
+            // To save dev and test set in the main "all data" folder
+            try {
+                testSet.saveCorpus(currentSeedFolder + File.separator + testSet.corpusName + ".txt");
+                devSet.saveCorpus(currentSeedFolder + File.separator + devSet.corpusName + ".txt");
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+            
+            // Remove both test and dev sets from training batches (works in-place)
+            trainingBatches.remove(trainingBatches.size()-1); // Remove test set
+            trainingBatches.remove(trainingBatches.size()-1); // Remove dev set
             // Done with the test set, now dealing with training batches.
             int batchCounter = 0;
             // First, save all to file:
@@ -294,17 +818,54 @@ public class Experiments {
             // Now do the training and eval:
             int currentMergedBatchIndex = 1;
             RecordTypeCorpus cumulativeTrainingData = new RecordTypeCorpus();
-
+            WordHypothesisBase previousModel = null;
+            Double previousF1Score = null;  // Track previous F1 score for early stopping
+            Double previousCoverage = null;  // Track previous coverage for early stopping
             System.out.println(ANSI_GREEN + "******** Seed " + currentSeed + " ********" + ANSI_RESET);
             for (RecordTypeCorpus batch : trainingBatches) {
+                RecordTypeCorpus nonCumulativeTrainingData = new RecordTypeCorpus(); // reset for non-cumulative
+                nonCumulativeTrainingData.addAll(batch);
                 cumulativeTrainingData.addAll(batch);
+                nonCumulativeTrainingData.corpusName = corpus.corpusName + "_trainBatch" + currentMergedBatchIndex;  // Todo is it used for anything beside writing results to file? I don't think so.
                 cumulativeTrainingData.corpusName = corpus.corpusName + "_trainBatch" + currentMergedBatchIndex;  // Todo is it used for anything beside writing results to file? I don't think so.
+
                 String currentFolderName = "S" + currentSeed + "_B" + currentMergedBatchIndex;
-                EvalResult batchtResult = trainTestBatch(currentFolderName, modelDir, cumulativeTrainingData, devSet, currentMergedBatchIndex); // todo maybe use currentseeddir so it's all under the seed folder, for tidiness.
+
+                // Evaluate on both dev set (for early stopping) and test set (for final results)
+                Pair<EvalResult, WordHypothesisBase> devOutput = trainTestBatchWithHB(currentFolderName, modelDir, nonCumulativeTrainingData, devSet, currentMergedBatchIndex, "_dev", previousModel);
+                EvalResult devResult = devOutput.first;
+                previousModel = devOutput.second;
+                
+                // IMPORTANT NOTE: cumulative training set will overwrite the non-cumulative one in this process below, but no problem.
+                logger.warn("Cumulative training set will overwrite the non-cumulative one in this process below, but no problem.");
+
+                // Evaluate on test set using the same trained model (reminder: won't train the model again)
+                Pair<EvalResult, WordHypothesisBase> testOutput = trainTestBatchWithHB(currentFolderName, modelDir, cumulativeTrainingData, testSet, currentMergedBatchIndex, "", previousModel);
+                EvalResult testResult = testOutput.first;
+                
+                // Get dev set F1 score for early stopping check (based on top-1 actions)
+                 double currentDevF1Score = devResult.getTestAccuracy(1, "f1");
+                 double currentDevCoverage = devResult.getTestCoverage(1);
+//                double currentDevF1Score = devResult.getTestEM(1); // So it is actually a bad variable name since it's em and not f1 anymore.
+                
+                // Check early stopping condition based on dev set performance
+                if (checkEarlyStoppingCondition(currentDevF1Score, previousF1Score, EARLY_STOPPING_MIN_THRESHOLD, EARLY_STOPPING_DELTA, currentDevCoverage, previousCoverage, EARLY_STOPPING_MIN_THRESHOLD, EARLY_STOPPING_DELTA)) {
+                    System.out.printf("Early stopping triggered at batch %d for seed %d. Dev F1 score: %.3f%n",
+                        currentMergedBatchIndex, currentSeed, currentDevF1Score);
+                    resultInSeed.add(testResult); // Add test result to final results
+                    fullResults.put(i, resultInSeed);
+                    addResultsToTSV(currentSeed, testResult, modelDir + "fullResultsHB.tsv");
+                    break;  // Exit the training loop
+                }
+                
                 currentMergedBatchIndex++;
-                resultInSeed.add(batchtResult);
+                resultInSeed.add(testResult); // Add test result to final results
                 fullResults.put(i, resultInSeed);
-                addResultsToTSV(currentSeed, batchtResult, modelDir + "fullResults.tsv");
+                addResultsToTSV(currentSeed, testResult, modelDir + "fullResultsHB.tsv");
+                
+                // Update previous dev F1 score for next iteration (for early stopping)
+                previousF1Score = currentDevF1Score;
+                previousCoverage = currentDevCoverage;
             }
         }
         return fullResults;
@@ -313,14 +874,14 @@ public class Experiments {
 
     /**
      * Trains and tests a BabyDS model on a batch of data, and saves and returns the results.
-     * @param folderName
-     * @param modelDir
-     * @param trainingBatch
-     * @param testingData
-     * @param batchNumber
-     * @return
+     * @param folderName Path to the folder where the model and results will be saved. Used batches, so less general than modelDir.
+     * @param modelDir Path to the root directory where all the models and results will be saved.
+     * @param trainingBatch The training batch of data to be used for training the model.
+     * @param testingData The testing data to be used for evaluating the model.
+     * @param batchNumber The batch number of the current training batch.
+     * @return The evaluation results of the model after training and testing.
      */
-    public EvalResult trainTestBatch(String folderName, String modelDir, RecordTypeCorpus trainingBatch, RecordTypeCorpus testingData, int batchNumber) {
+    public EvalResult trainTestBatch(String folderName, String modelDir, RecordTypeCorpus trainingBatch, RecordTypeCorpus testingData, int batchNumber, String testSetSuffix) {
         // todo properly test this method
         // make foldername under modelDir and copy the computational action files there:
         String folderPath = modelDir + folderName + File.separator;
@@ -359,14 +920,137 @@ public class Experiments {
             logger.info("Training model...");
             ds.train_model(trainingBatch, folderPath, seedGrammarPath);
         }
-        EvalResult result = ds.evaluate_model(0, folderPath, "", "", N);
+        EvalResult result = ds.evaluate_model(0, folderPath, "", testSetSuffix, N);
         result.setDatasetNames(trainingBatch.corpusName, testingData.corpusName);
         result.setDatasetSizes(trainingBatch.size(), testingData.size());
         System.out.println("\nEvaluation results for batch: " + batchNumber  + " are:");
         System.out.println(result.getSemanticAccResultsTable(String.format("Batch %d", batchNumber)));
-        System.out.println(result.getParsingCoverageResultsTable(""));  //todo add proper info?
+        System.out.println(result.getParsingCoverageResultsTable(""));  //todo add proper info
         logger.trace(result.getDiagnosticResults());
         return result;
+    }
+
+
+    public EvalResult trainTestBatchwithHB(String folderName, String modelDir, RecordTypeCorpus trainingBatch, RecordTypeCorpus testingData, int batchNumber, String testSetSuffix, String hbDir) {
+        // todo properly test this method
+        // make foldername under modelDir and copy the computational action files there:
+        String folderPath = modelDir + folderName + File.separator;
+        File folder = new File(folderPath);
+        if (!folder.exists()) {
+            if (!folder.mkdirs()) {
+                throw new RuntimeException("Could not create directory: " + folderPath);
+            }
+        }
+        
+        // Copy the comp-action file from current dir (model dir) to this folder:
+        File sourceFile = new File(modelDir + "computational-actions.txt");
+        if (!sourceFile.exists()) {
+            throw new RuntimeException("Source file does not exist: " + sourceFile.getAbsolutePath());
+        }
+        
+        File destFile = new File(folder + File.separator + "computational-actions.txt");
+        try {
+            Files.copy(sourceFile.toPath(), destFile.toPath(), StandardCopyOption.REPLACE_EXISTING);
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to copy computational-actions.txt: " + e.getMessage());
+        }
+        
+        // save training set and test set to this folder:
+        try {
+            trainingBatch.saveCorpus(folder + File.separator + "_train.txt");  //todo set their names?
+            testingData.saveCorpus(folder + File.separator + "_test.txt");
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to save corpus files: " + e.getMessage());
+        }
+
+        BabyDSInduction ds = new BabyDSInduction();
+        System.out.println(ANSI_CYAN + "******** Batch " + batchNumber + " ********" + ANSI_RESET);
+        // If the model exists and skip is true, then skip!
+        if (modelExists(folderPath)) {
+            System.out.println("Model already exists in " + folderPath);
+            if (SKIP_RETRAINING) {
+                System.out.println("Skipping training...");
+            } else {
+                logger.info("Training model...");
+                ds.trainBabyDSwithHB(trainingBatch, folderPath, seedGrammarPath, hbDir);
+            }
+        } else {
+            logger.info("Training model...");
+            ds.trainBabyDSwithHB(trainingBatch, folderPath, seedGrammarPath, hbDir);
+        }
+        EvalResult result = ds.evaluate_model(0, folderPath, "", testSetSuffix, N);
+        result.setDatasetNames(trainingBatch.corpusName, testingData.corpusName);
+        result.setDatasetSizes(trainingBatch.size(), testingData.size());
+        System.out.println("\nEvaluation results for batch: " + batchNumber  + " are:");
+        System.out.println(result.getSemanticAccResultsTable(String.format("Batch %d", batchNumber)));
+        System.out.println(result.getParsingCoverageResultsTable(""));  //todo add proper info
+        logger.trace(result.getDiagnosticResults());
+        return result;
+    }
+
+    /**
+     * TODO trainingBatch should be renamed to just trainingData. Batch should be used in the upper method!
+     * TODO Add documnetation here.
+     */
+    public Pair<EvalResult, WordHypothesisBase> trainTestBatchWithHB(String folderName, String modelDir, RecordTypeCorpus trainingBatch, RecordTypeCorpus testingData, int batchNumber, String testSetSuffix, WordHypothesisBase previousModel) {
+        // todo properly test this method
+        WordHypothesisBase newModel = null;
+        // make foldername under modelDir and copy the computational action files there:
+        String folderPath = modelDir + folderName + File.separator;
+        File folder = new File(folderPath);
+        if (!folder.exists()) {
+            if (!folder.mkdirs()) {
+                throw new RuntimeException("Could not create directory: " + folderPath);
+            }
+        }
+
+        // Copy the comp-action file from current dir (model dir) to this folder:
+        File sourceFile = new File(modelDir + "computational-actions.txt");
+        if (!sourceFile.exists()) {
+            throw new RuntimeException("Source file does not exist: " + sourceFile.getAbsolutePath());
+        }
+
+        File destFile = new File(folder + File.separator + "computational-actions.txt");
+        try {
+            Files.copy(sourceFile.toPath(), destFile.toPath(), StandardCopyOption.REPLACE_EXISTING);
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to copy computational-actions.txt: " + e.getMessage());
+        }
+
+        // save training set and test set to this folder:
+        try {
+            trainingBatch.saveCorpus(folder + File.separator + "_train.txt");  //todo set their names?
+            testingData.saveCorpus(folder + File.separator + "_test"+testSetSuffix+".txt");
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to save corpus files: " + e.getMessage());
+        }
+
+        BabyDSInduction ds = new BabyDSInduction();
+        System.out.println(ANSI_CYAN + "******** Batch " + batchNumber + " ********" + ANSI_RESET);
+        // If the model exists and skip is true, then skip!
+        if (modelExists(folderPath)) {
+            System.out.println("Model already exists in " + folderPath);
+            if (SKIP_RETRAINING) {
+                System.out.println("Skipping training...");
+                logger.warn("new model (HB) will be null, as a model already exists in the given directory!");
+            } else {
+                logger.info("Training model...");
+                newModel = ds.trainBabyDSwithHB(trainingBatch, folderPath, seedGrammarPath, previousModel);
+            }
+        } else {
+            logger.info("Training model...");
+            newModel = ds.trainBabyDSwithHB(trainingBatch, folderPath, seedGrammarPath, previousModel);
+        }
+        EvalResult result = ds.evaluate_model(0, folderPath, "", testSetSuffix, N);  //TODO I think I should add the capability of passing trainign data directly (check if it is string or data)
+        // TODO then I can send in training data as full, train on the part I want, and test on full (so I get the same numbers as before HB)
+        result.setDatasetNames(trainingBatch.corpusName, testingData.corpusName);
+        result.setDatasetSizes(trainingBatch.size(), testingData.size());
+        System.out.println("\nEvaluation results for batch: " + batchNumber  + " are:");
+        System.out.println(result.getSemanticAccResultsTable(String.format("Batch %d", batchNumber)));
+        System.out.println(result.getParsingCoverageResultsTable(""));  //todo add proper info
+        logger.trace(result.getDiagnosticResults());
+
+        return new Pair<>(result, newModel);
     }
 
 
@@ -427,9 +1111,10 @@ public class Experiments {
      * todo expand to all classes.
      */
     public void runRQ1(){
-        HashMap<Integer, List<EvalResult>> minDataResults = this.findMinimumMasteryData(CORPUS_NAME, rq1path, REPEAT, SEED);
-//        this.allResultsToTSV(minDataResults); //todo move this under write results to file!
-        // todo average.
+        // HashMap<Integer, List<EvalResult>> minDataResults = this.findMinimumMasteryData(CORPUS_NAME, rq1path, REPEAT, SEED);
+        HashMap<Integer, List<EvalResult>> rq1hbResults = this.rq1HB(CORPUS_NAME, RQ1CLASS1HB, REPEAT, SEED);
+    //    this.allResultsToTSV(rq1hbResults); //todo move this under write results to file!
+        // todo average over all classes
     }
 
 
@@ -438,25 +1123,25 @@ public class Experiments {
      * todo make it parallel
      * @param rootFolderPath
      */
-    public HashMap<Integer, List<EvalResult>> evalNeuralTTR(String rootFolderPath){
-        return evalNeuralTTR(rootFolderPath, "_neural_targets", "_predictions");
+    public HashMap<Integer, List<EvalResult>> evalNeuralTTR(String rootFolderPath, String outputFileName){
+        return evalNeuralTTR(rootFolderPath, "_neural_targets", "_predictions", outputFileName);
     }
 
 
-    public HashMap<Integer, List<EvalResult>> evalNeuralTTR(String rootFolderPath, String targetsFileName, String predictionsFileName) {
+    public HashMap<Integer, List<EvalResult>> evalNeuralTTR(String rootFolderPath, String targetsFileName, String predictionsFileName, String outputFileName) {
         HashMap<Integer, List<EvalResult>> fullResults = new HashMap<>();
         String[] train_test_file_names = {"train", "test"};
 
         File rootFolder = new File(rootFolderPath);
         if (!rootFolder.exists() || !rootFolder.isDirectory()) {
             logger.error("Invalid root folder path: " + rootFolderPath);
-            return fullResults;
+            // return fullResults;
         }
 
         File[] subFolders = rootFolder.listFiles(File::isDirectory);
         if (subFolders == null || subFolders.length == 0) {
             logger.error("No subfolders found in the root folder: " + rootFolderPath);
-            return fullResults;
+            // return fullResults;
         }
 
         Arrays.stream(subFolders).forEach(subFolder -> {
@@ -485,7 +1170,8 @@ public class Experiments {
                         .collect(Collectors.toList());
 
                     if (targets.size() != predictions.size()) {
-                        logger.warn("Mismatch in size between targets and predictions in folder: " + subFolder.getName());
+                        System.out.println(ANSI_RED+"Mismatch in size between targets and predictions in folder: " + subFolder.getName()+ANSI_RESET);
+                        System.out.println("You have to debug, but I will skip it for now!");
                         continue;
                     }
 
@@ -513,7 +1199,7 @@ public class Experiments {
             neuralTTRResult.writeResultsToFile(subFolder+File.separator, "");
 
             // Add results to TSV
-            addResultsToTSV(seed, neuralTTRResult, rootFolderPath + "fullResultsNeuralTTR.tsv");
+            addResultsToTSV(seed, neuralTTRResult, rootFolderPath + outputFileName + ".tsv");
         });
 
         return fullResults;
@@ -558,9 +1244,12 @@ public class Experiments {
 
             if (prediction.second) {
                 numParsed++;
-                if (targetRT.subsumes(predictionRT) && predictionRT.subsumes(targetRT)) {
-                    exactMatches++;
-                }
+            }
+            //todo ATTENTION TOOK IT OUT TO SEE IF IT WORKS BETTER!
+            if (targetRT.subsumes(predictionRT) && predictionRT.subsumes(targetRT)) {
+                exactMatches++;
+            } else {
+                System.out.println("Exact match failed for target: \n" + targetRT + "\nand prediction: \n" + predictionRT + "\n");
             }
         }
 
@@ -590,25 +1279,58 @@ public class Experiments {
     }
 
 
-    public void rq2() {
-    // TODO should add "G" for generalisation tests, "F" for forgetting tests, and "B" for both forgetting and generalisation tests.
-    //todo add also "C" for curriculum learning tests, and "R" for random learning tests.
-    }
-
-    public void rq3() {
-
+    /**
+     * Runs all of RQ2 (generalisation and forgetting) experiments.
+     * Loops through:
+     * - classes -> 1..4
+     * - settings -> F, S, B
+     * - withCurriculum -> true/false
+     * - seed -> 45..45+REPEAT
+     */
+    public void runRQ2(int repeatCount, int seed) {
+        // todo maybe define the lists that we have below up in the class.
+        RQ2FullResults fullResults = new RQ2FullResults();  //TODO refactor to include all the info above...
+        for (int i = 0; i <= repeatCount; i++) {
+            int currentSeed = seed + i;
+            for (int j = i + 1; j <= 4; j++) {
+                for (String setting : new String[]{"first", "second", "both"}) {
+                    for (boolean withCurriculum : new boolean[]{true, false}) {
+                        RQ2SeedResult resultInSeed = test_generalisation_forgetting(i, j, setting, withCurriculum, currentSeed);  ///TODO i & j are wrong.
+                        fullResults.addResult(currentSeed, withCurriculum, resultInSeed);
+//                        addResultsToTSV(currentSeed, batchtResult, modelDir + "fullResults.tsv");  // TODO
+                    }
+                }
+            }
+        }
     }
 
 
     public static void main(String[] args) {
 
         Experiments exp = new Experiments();
-//        exp.runRQ1();
-        System.out.println(exp.evalNeuralTTR(NTRR_RQ1_CLASS1_PATH));
-////        exp.test_forgetting(1, 2, "S");
-//        HashMap<Integer, List<EvalResult>> minData = exp.findMinimumMasteryData(CORPUS_NAME, modelPath, REPEAT, SEED);
-//        exp.allResultsToTSV(minData);
 
+        // To run RQ1 (check inside for params)
+//         exp.runRQ1();
+
+         // To generate data in folders for RQ1:
+//        exp.generateDataFolders("c2", NTR_RQ1_CLASS2_PATH, REPEAT, SEED, INIT_BATCH_RATIO, INC_BATCH_RATIO);
+        // To convert current corpora to NeuralTTR format:
+//        exp.convertCurrentCorporaToNN(NTR_RQ1_CLASS2_PATH);
+         // To make neural parsing corpus:
+//        exp.makeNeuralParsingCorpus(DATASET_NAME, c2full, "");
+
+
+        // To evaluate NeuralTTR:
+        String ntr_eval_address = NTR_RQ1_PATH + "NTR-CUR" + File.separator;
+        System.out.println(exp.evalNeuralTTR(ntr_eval_address, "NTR-CUR"));
+
+
+//        exp.test_generalisation_forgetting(1, 2, "second", false, SEED);
+    //    HashMap<Integer, List<EvalResult>> minData = exp.findMinimumMasteryData(CORPUS_NAME, modelPath, REPEAT, SEED);
+    //    exp.allResultsToTSV(minData);
+
+        // HashMap<Integer, List<EvalResult>> rq1hbResults = exp.rq1HB(CORPUS_NAME, RQ1CLASS1HB, REPEAT, SEED);
+        // exp.addResultsToTSV(rq1hbResults);
 
     }
 
